# AI-Incident-Intelligence-Root-Cause-Analysis-Platform

./: .gitignore  .vercelignore  Encoders.ipynb  PROJECT_REPORT.md  README.md  api_server.py  app.py  main.py  pyproject.toml  requirements.txt  train_hdfs_models.py  train_lstm_xgboost_artifacts.py  train_transformer_artifact.py  vercel.json
.crewai_storage/: .crewai_user.json  latest_kickoff_task_outputs.db
Models/: Comparison_model.ipynb
Models/Deep Learning/: Autoencoders.ipynb  LSTM.ipynb  Transformers.ipynb  y_test.npy
Models/Supervised/: LightGBM.ipynb  Random_forest_model.ipynb  SVM.ipynb  XGBoost_model.ipynb
Models/Unsupervised/: Isolation_forest.py  Isolation_forest_model.ipynb
Preprocessing and EDA/: eda_hdfs.ipynb  pre_for_lstm.ipynb
agents/: crew_setup.py  tasks_def.py
artifacts/: hdfs_lightgbm.joblib  hdfs_lstm.joblib  hdfs_transformer.joblib  hdfs_xgboost.joblib  users.json
inference/: detector.py  event_mapper.py  hdfs_data.py  incident_store.py  transformer_model.py
llm/: llm_explainer.py  prompt_builder.py
sample_uploads/: normal_hdfs_sequence.txt  problem_hdfs_sequence.txt  realtime_problem_hdfs_log.txt
server/: __init__.py  analysis.py  auth.py  config.py  llm.py  presentation.py  routes.py
streamlit_app/: __init__.py  auth_view.py  styles.py  utils.py
web/: index.html
